# INF144

./: README.md
2025-1/Clase07/televidentes/: RegistroDeTelevidentes_lab1.txt  funciones.cpp  funciones.hpp  main.cpp  utils.hpp
2025-1/Clase08/Archivos/: clientes_moviles_2025.txt  codigos.txt  funciones.cpp  funciones.hpp  main.cpp  notas.txt  reporte.txt  utils.hpp
2025-1/Clase09/: clientes_moviles_2025.txt
2025-1/Clase09/clientes_moviles/: clientes_moviles_2025.txt  funciones.cpp  funciones.hpp  main.cpp  reporte.txt  utils.hpp
2025-1/Clase10/clientes_moviles/: CLIENTES MOVILES 2025  funciones.cpp  funciones.hpp  main.cpp  planes_clientes_moviles_2025.txt  reporte.txt  utils.hpp
2025-1/Clase11/arreglos/: alumnos.csv  codigos.txt  funciones.cpp  funciones.hpp  main.cpp  reporte.txt  reporte_2.txt  utils.hpp
2025-1/Clase12/: contratos_clientes_moviles_2025.txt
2025-1/Clase12/ArreglosDinamicos/: main.cpp
2025-1/Clase12/ClientesMovilesMultiplesArchivos/: clientes_moviles_2025.txt  funciones.cpp  funciones.hpp  main.cpp  planes_moviles_2025.txt  reporte.txt  telefonos_moviles_2025.txt  utils.hpp
2025-1/Clase13/ArreglosCombinados/: Reporte.txt  funciones.cpp  funciones.hpp  main.cpp  utils.hpp
2025-1/Clase14/ArreglosJuegos/: Funciones.cpp  Funciones.hpp  JuegosDisponibles.txt  PartidasJugadas.txt  main.cpp  reporte.txt  utils.hpp
2025-1/Clase15/OrdenacionArreglos/: ReporteVideojuegos.txt  ReporteVideojuegosNuevoDato.txt  funciones.cpp  funciones.hpp  main.cpp  videojuegos.txt
2025-1/Clase16/OrdenacionArreglos/: ReporteVideojuegosInsertarOrdenado.txt  ReporteVideojuegosOrdenador.txt  funciones.cpp  funciones.hpp  main.cpp  utils.hpp
2025-1/Clase16/VideosMusicales/: Reproducciones.txt  UsuariosRegistrados.txt  Videos.txt  funciones.cpp  funciones.hpp  main.cpp  utils.hpp
2025-1/Clase17/Pacientes/: Pacientes.txt
2025-1/Clase17/VideosMusicales/: DispositivosRegistrados.txt  Reproducciones.txt  funciones.hpp  main.cpp  reporte.txt  utils.hpp
2025-1/Clase18/cadenas/: Funciones.cpp  Funciones.hpp  Utils.hpp  main.cpp
2025-1/Clase19/NLP/: Funciones.cpp  Funciones.hpp  main.cpp  (+1 more)
2025-1/Clase24/: personal.csv  personal_actualizado.csv
2025-2/Clase14/: LogrosEnJuegos.txt  PartidasRegistradas.txt
2025-2/Clase15/: CanalesYoutube  videos
2025-2/Clase21/: music_dataset_extended.csv
2025-2/Clase22/: pokemon.csv
2025-2/Clase25/Listas/: CMakeLists.txt  main.cpp
2025-2/Clase25/Listas/src/: Utils.hpp
2025-2/Clase25/Listas/src/BibliotecaLista/: Lista.cpp  Lista.hpp  ListaTAD.hpp  Nodo.hpp
2025-2/Clase25/Pilas/: CMakeLists.txt  main.cpp
2025-2/Clase25/Pilas/src/BibliotecaPila/: Nodo.hpp  Pila.cpp  PilaTAD.hpp
2025-2/Clase26/Ex3/: CMakeLists.txt  main.cpp
2025-2/Clase26/Ex3/Bibliotecas/: Libreria.hpp  Libro.cpp  ListaCliente.hpp  Utils.hpp
2025-2/Clase26/Ex3/src/: Funciones.cpp  Funciones.hpp
2025-2/Clase27/AnalisisSentimientoHP/: CMakeLists.txt  main.cpp  playground
2025-2/Clase27/AnalisisSentimientoHP/src/: Funciones.cpp  Funciones.hpp  Palabra.hpp  Personaje.hpp  Utils.hpp
2025-2/Clase27/AnalisisSentimientoHP/src/BibliotecaLista/: ListaPalabra.hpp  ListaPersonaje.hpp  NodoPalabra.hpp  NodoPersonaje.hpp
2025-2/Laboratorio dirigido (postparcial)/ex1p2/: CMakeLists.txt  main.cpp
2025-2/Laboratorio dirigido (postparcial)/ex1p2/src/headers/: auxiliary_functions.hpp  functions.hpp  general_functions.hpp  read_functions.hpp  utils.hpp
2025-2/Laboratorio dirigido (postparcial)/ex1p2/src/implementation/: auxiliary_functions.cpp  functions.cpp  general_functions.cpp  read_functions.cpp
2026-1/Clase21/Poke261/: CMakeLists.txt  main.cpp
2026-1/Clase21/Poke261/ArchivosDeDatos/: move-data.csv  pokemon.csv
2026-1/Clase21/Poke261/Bibliotecas/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp  Utils.hpp
2026-1/Clase21/Poke261/Estructuras/: MoveSet.hpp  Movimiento.hpp  Pokemon.hpp
2026-1/Clase22/Rappi/: CMakeLists.txt  main.cpp
2026-1/Clase22/Rappi/Bibliotecas/Auxiliares/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp  Utils.hpp
2026-1/Clase22/Rappi/Bibliotecas/Controlador/: FuncionesEstructuras.cpp  FuncionesEstructuras.hpp
2026-1/Clase22/Rappi/Bibliotecas/Modelo/Estructuras/: Codigo.hpp  Conductor.hpp  Envio.hpp
2026-1/Clase24/Colas/: CMakeLists.txt  main.cpp
2026-1/Clase24/Colas/src/BibliotecaCola/: Cola.cpp  ColaTAD.hpp
2026-1/Clase24/ListaLigadaSimple/: CMakeLists.txt  main.cpp
2026-1/Clase24/ListaLigadaSimple/ArchivosDeDatos/: codigos.txt
2026-1/Clase24/ListaLigadaSimple/BibliotecaFuncionesAuxiliares/: FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp
2026-1/Clase24/ListaLigadaSimple/BibliotecaListaSimple/: NodoListaSImple.hpp
lab_pasados/2025_2/EX2/Pregunta2_2025_2/: CMakeLists.txt  comentarios.csv  main.cpp
lab_pasados/2025_2/EX2/Pregunta2_2025_2/ArchivosDeReportes/: reporte_stopwords.txt  reporte_tokens.txt  reporte_tokens_sin_stopwords_ordenado_frecuencia.txt  tokens_sin_stopwords.txt
lab_pasados/2025_2/EX2/Pregunta2_2025_2/Bibliotecas/: Funciones.cpp  Funciones.hpp  Utils.hpp
lab_pasados/2025_2/EX2/Pregunta2_2025_2/Bibliotecas/Estructuras/: Comentario.hpp  Palabra.hpp  Streamer.hpp  Transmision.hpp
lab_pasados/2025_2/EX2/Pregunta2_2025_2/Bibliotecas/Lista/: ListaPalabra.hpp  NodoPalabra.hpp
lab_pasados/2025_2/L8/: CMakeLists.txt  main.cpp
lab_pasados/2025_2/L8/Bibliotecas/: Categoria.hpp  FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp  FuncionesEstructuras.cpp  FuncionesEstructuras.hpp  Reproduccion.hpp  Util.hpp
(+624 files in other folders)
